# ecom_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
dbt_ecom/: dbt_project.yml
dbt_ecom/models/marts/: dim_customers.sql  dim_products.sql  dim_sellers.sql  fct_order_items.sql  fct_orders.sql  fct_receita_diaria.sql
dbt_ecom/models/staging/: _sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_sellers.sql
schemas/: customers.py  order_items.py  orders.py  payments.py  products.py  sellers.py
src/: exploration.ipynb  extract.py  load.py  transform.py
terraform/: main.tf
