[project]
name = "ecom-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.17.0",
    "logging>=0.4.9.6",
    "pandas>=3.0.3",
    "pandera[pandas]>=0.32.1",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
